fix: Rd Dauerzählstellen chart tooltip was not centered on hover on dots

--- a/modules/tools/gfi/themes/continuousCountingBike/style.less
+++ b/modules/tools/gfi/themes/continuousCountingBike/style.less
@@ -43,6 +43,7 @@
         stroke: #000;
     }
     .graph-tooltip-div {
+        transform: translateX(-50%);
         display: inline-block;
         position: absolute;
         color: @color_1;
